TP2/Linkador/erro.txt
Linker.cpp:3:1: error: ‘Linker’ does not name a type
 Linker::Linker(int argc, char *argv[]){
 ^
Linker.cpp:20:6: error: ‘Linker’ has not been declared
 void Linker::resolveDependencies(){
      ^
Linker.cpp:24:6: error: ‘Linker’ has not been declared
 void Linker::writeMemory(){
      ^
ObjectModule.cpp:3:1: error: ‘ObjectModule’ does not name a type
 ObjectModule::ObjectModule(int startPosition){
 ^
